[package]
name = "yamth"
version = "0.1.0"
edition = "2024"
description = "Yet Another Markdown To HTML, A fast Markdown to HTML converter with live reload"
license = "MIT"
repository = "https://github.com/bouDeScotch/md_to_html"
readme = "README.md"

[dependencies]
regex = "1"
open = "5"
notify = "6"
clap = { "version" = "4", features = ["derive"] }
tiny_http = "0.12"